--- a/package.json
+++ b/package.json
@@ -3,10 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@types/hookrouter": "^2.2.3",
-    "@types/node": "^14.6.3",
-    "@types/react-router-dom": "^5.1.5",
-    "@types/redux": "^3.6.0",
+    "axios": "^0.20.0",
     "hookrouter": "^1.2.3",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
@@ -14,6 +11,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
     "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0",
     "typescript": "^4.0.2"
   },
   "scripts": {
@@ -26,6 +24,12 @@
     "extends": "react-app"
   },
   "devDependencies": {
+    "@types/axios": "^0.14.0",
+    "@types/hookrouter": "^2.2.3",
+    "@types/node": "^14.6.3",
+    "@types/react-redux": "^7.1.9",
+    "@types/react-router-dom": "^5.1.5",
+    "@types/redux": "^3.6.0",
     "@types/jest": "^26.0.13",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
